--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,17 @@ click==8.1.7
 blinker==1.6.3 
 gunicorn
 openai
+
+
+flask
+openai
+python-dotenv
+smtplib
+itsdangerous==2.1.2
+click==8.1.7
+blinker==1.6.3
+gunicorn
+openai
+requests
+python-dotenv
+flask-cors
